# GeoRag-Intelligent-V2.1

./: .dockerignore  .env.example  .env.production.example  .env.testing  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COVERAGE.md  HANDOVER_MANIFEST.md  OVERNIGHT_2026_06_02.md  OVERNIGHT_LOG.md  PASS_1_MAPPING.md  README.md  bench_results_to_commit_baseline.json  boost.json  components.json  composer.json  docker-compose.yml  georag-architecture.html  georag-missing-features.html  package-lock.json  package.json  phpstan-baseline.neon  phpstan.neon  phpunit.pgsql.xml  pint.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src/dagster/: dagster.yaml  pyproject.toml  workspace.yaml
src/dagster/georag_dagster/: definitions.py  dq_writer.py  resources.py  sensor_helpers.py
src/dagster/georag_dagster/assets/: _minio_bronze_helpers.py  bronze.py  bronze_geophysics.py  bronze_lithology.py  bronze_public_geoscience.py  bronze_reports.py  bronze_samples.py  bronze_seismic.py  bronze_spatial.py  bronze_surveys.py  bronze_well_logs.py  bronze_xlsx.py  bronze_xyz.py  commit_ingestion_run.py  data_dictionary_dump.py  gold_cross_corpus_linker.py  gold_cross_section_panels.py  gold_drillhole_intervals_visual.py  gold_h3_density.py  gold_public_geoscience.py  gold_structure_measurements_visual.py  index_document_passages.py  index_neo4j.py  index_public_geoscience.py  index_reports.py  reranker_labels.py  reranker_labels_helpers.py  silver.py  silver_assay_dq.py  silver_cog_rasters.py  silver_collar_dq.py  silver_collars_canonicalize_backfill.py  silver_crs_dq.py  silver_drill_traces.py  silver_entity_ner_backfill.py  silver_geochronology.py  silver_geophysics.py  silver_lithology.py  silver_nl_summaries.py  silver_public_geoscience.py  (+15 more)
src/dagster/georag_dagster/checks/: __init__.py  drill_traces_checks.py  evidence_checks.py  index_checks.py  interval_overlap.py  interval_overlap_checks.py  silver_checks.py
src/dagster/georag_dagster/clients/: anthropic_batch.py  arcgis_rest.py  review_queue_writer.py  vllm_openai.py
src/dagster/georag_dagster/hooks/: shadow_v149.py
src/dagster/georag_dagster/observability/: __init__.py  otel.py
src/dagster/georag_dagster/parsers/: __init__.py  _csv_io.py  _dip_convention.py  _encoding.py  _hole_id.py  _sheet_classifier.py  _survey_interp.py  _unit_ambiguity.py  _vendor_aliases.py  csv_collar.py  csv_geochronology.py  csv_lithology.py  csv_sample.py  csv_survey.py  docx_parser.py  las_parser.py  pdf_report.py  (+5 more)
src/dagster/scripts/: _adr0010_session_c_driver.sh  _backfill_document_passages_to_qdrant.py  _reranker_50chunk_diagnostic.py
src/dagster/tests/: test_anthropic_batch_client.py  test_arcgis_rest_client.py  test_bedrock_geology_extractor.py  test_bronze_minio_unification.py  test_bsg_assets.py  test_commodity_grouping.py  test_cross_corpus_linker.py  test_csv_collar_parser.py  test_csv_delimiter_and_decimal_comma.py  test_csv_encoding_detection.py  test_csv_geochronology_parser.py  test_csv_sample_assay_dl.py  test_data_dictionary_dump.py  test_dip_convention.py  test_docx_parser.py  test_dxf_blocks.py  test_gdb_disambiguation.py  test_gold_h3_density.py  test_hole_id_canonical_in_parsers.py  test_hole_id_canonicalization.py  test_index_document_passages.py  test_interval_overlap.py  test_lithology_rock_code_resolution.py  test_ner_backfill_schedule.py  test_pdf_caption_fallback.py  test_pdf_dispatch_phase21.py  test_pdf_docling_ocr_config.py  test_pdf_figure_handoff.py  test_pdf_ocr_confidence_capture.py  test_pdf_page_languages.py  test_pdf_phase4_table_overhaul.py  test_pdf_resource_tables.py  test_pdf_section_chunking.py  test_pdf_two_column_layout.py  test_pdf_warnings.py  test_provenance_and_source_row.py  test_public_geoscience_field_mappings.py  test_qfield_ingestion.py  test_raster_parser.py  test_reranker_labels_schema.py  (+28 more)
src/fastapi/: .dockerignore  SECURITY.md  pyproject.toml  retrieval_threshold_sweep.csv  run_eval.py  run_eval_120.py
src/fastapi/app/: config.py  embedding_service.py  logging_config.py  main.py  metrics.py  middleware.py  reranker_service.py  settings_lifecycle.py  sidecar_auth.py  sparse_service.py
src/fastapi/scripts/: _debug_tier0e_psycopg2.py  _earle_chapter_splitter.py  _mine_reranker_labels_from_answer_runs.py  _smoke_parent_chunking.py  backfill_neo4j_workspace_id.py  bronze_backfill_las_dir.py  bronze_backfill_uranium_zip.py  bronze_backfill_xlsx_dir.py  cleanup_qdrant.py  compare_benchmarks.py  compare_benchmarks_per_slice.py  index_figures.py  ingest_one_cluster.py  init_qdrant.py  inspect_ingest_zip.py  load_test.py  populate_neo4j.py  populate_source_files.py  reembed_qdrant.py  run_golden_benchmark.py  run_golden_harness.py  run_qwen3_citation_compliance.py  soak_test.py  sweep_retrieval_threshold.py  verify_graph_entity_cache.py
src/fastapi/tests/: conftest.py  conftest_pg.py  golden_queries.json  test_acquire_scoped.py  test_active_history_contextvar.py  test_agent_tools.py  test_agentic_escalation.py  test_agentic_retrieval_context_envelope.py  test_agentic_retrieval_graph.py  test_agentic_retrieval_intent_classifier.py  test_agentic_retrieval_persist_children.py  test_agentic_retrieval_persist_node.py  test_agentic_retrieval_preprocessor.py  test_alerts_inbox_integration.py  test_analogue_finder.py  test_answer_emphasis_section.py  test_answer_quality.py  test_answer_run_confidence_latency.py  test_anthropic_egress_gate.py  test_anthropic_streaming.py  test_assembler_geo_answer.py  test_assessment_summarizer.py  test_assessment_survey_adapters.py  test_audit_chain_verify.py  test_audit_cold_tier_archive.py  test_authority.py  test_bc_drillhole_adapter.py  test_bc_minfile_adapter.py  test_bc_minfile_pull.py  test_bedrock_geology_adapters.py  test_cache_key_versioning.py  test_cache_scope.py  test_chaos_resilience.py  test_chat_card_payloads.py  test_citation_binding.py  test_citation_lifecycle.py  test_citation_marker_unification.py  test_citation_pipeline.py  test_citation_presence_new_intents.py  test_claim_ledger.py  (+235 more)
(+2497 files in other folders)
