[project]
name = "georag-dagster"
version = "0.1.0"
description = "GeoRAG Intelligence — Dagster ingestion pipeline"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.13",
    "dagster-postgres>=0.29",
    "dagster-docker>=0.29",
    "dagster-webserver>=1.13",
    "polars>=1.24",
    "duckdb>=1.3",
    "geopandas>=1.0",
    "fiona>=1.10",
    "rasterio>=1.4",
    "pyproj>=3.7",
    "lasio>=0.31",
    "segyio>=1.9",
    "obspy>=1.4",
    "boto3>=1.35",
    "botocore>=1.35",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "neo4j>=5.28",
    "qdrant-client>=1.13",
    "sentence-transformers>=4.1",
    # SPLADE++ sparse encoder (Module 4 Chunk 2)
    "torch>=2.3,<3.0",
    "transformers>=4.40,<5.0",
    "unstructured[pdf]>=0.17",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "fastexcel>=0.14",
    "python-docx>=1.1",
    "xlrd>=1.2,<2.0",
    "ezdxf>=1.0,<2.0",
    "wellpathpy>=0.5.0,<1.0.0",
    "rio-cogeo>=5.0.0,<6.0.0",
    # Phase 7 Step 1 (R-P6-1) — OTel SDK + OTLP HTTP exporter so
    # georag_dagster.observability.install_tracer_provider() can wire
    # a real provider when OTEL_EXPORTER_OTLP_ENDPOINT is set. The
    # versions match the fastapi image (1.40 / 0.61b) so Tempo can
    # join spans across services.
    "opentelemetry-api>=1.40,<2",
    "opentelemetry-sdk>=1.40,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.40,<2",
    # Doc-phase 126 — used hard by parsers/_hole_id.py for fuzzy-match
    # collar-ID resolution. Was not previously declared; the
    # check_pyproject_covers_imports gate caught the omission.
    "rapidfuzz>=3.0",
    # vLLM OpenAI-compatible client — used by the reranker_labels asset
    # group for synthetic query generation against the in-cluster Qwen
    # model. Hard dep because VllmResource.get_client() returns OpenAI().
    "openai>=1.40,<2",
]

[project.optional-dependencies]
ingest = [
    "dagster",
    "dagster-postgres",
    "dagster-docker",
    "dagster-webserver",
    "polars",
    "duckdb",
    "geopandas",
    "fiona",
    "rasterio",
    "pyproj",
    "lasio",
    "segyio",
    "obspy",
    "boto3",
    "botocore",
    "psycopg2-binary",
    "openpyxl",
    "fastexcel",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "georag_dagster.definitions"

[tool.ruff]
target-version = "py313"
line-length = 120

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
